# AuC

./: .gitignore  LICENSE  README.md  pyproject.toml  test_report_2026-06-26.md
.github/workflows/: ci.yml
auc/: __init__.py  agent.py  chat_agent.py  checkpoint.py  cli.py  cli_ui.py  code_index.py  config.py  diagrams.py  evaluation.py  evolution_loop.py  extras.py  fslock.py  hooks.py  index_backends.py  index_vector.py  isolation.py  jobs.py  messages.py  multimodal.py  plan.py  prompt_input.py  prompt_optimizer.py  receipt.py  review.py  routines.py  run_context.py  sandbox.py  skills.py  stream_display.py  terminal.py  types.py  usage.py  version_check.py  vision_proxy.py  work_mode.py  worktree.py
auc/context/: __init__.py  compactor.py  pairing.py  window.py
auc/events/: __init__.py  bus.py
auc/integration/: __init__.py  aum.py  dispatcher.py  evolution.py  im_base.py  im_card.py  mcp.py  nuggets.py  qq.py  slicer.py  telegram.py
auc/loop/: __init__.py  base.py  react.py
auc/model/: __init__.py  anthropic.py  client.py  deepseek_anthropic.py  discovery.py  factory.py  json_util.py  local_routing.py  openai.py  retry.py  routing.py  streaming.py
auc/policy/: __init__.py  autonomy.py  escalation.py  privilege.py
auc/ports/: __init__.py  approval.py  memory.py  package.py  rules.py
auc/roles/: __init__.py  agency_loader.py  agency_sources.py  catalog.py  constants.py  divisions.py  loader.py  routing.py  writer.py
auc/roles/architect/: prompt.md  role.yaml
auc/roles/bundled/agency/: .source
auc/roles/bundled/agency-zh/: .source
auc/roles/coder/: prompt.md  role.yaml
auc/roles/core/coder/: evolution.yaml  nuggets.yaml  prompt.md  role.yaml
auc/roles/ops/: prompt.md  role.yaml
auc/roles/reviewer/: prompt.md  role.yaml
auc/roles/tutor/: prompt.md  role.yaml
auc/skill_library/: anbeime_loader.py  anthropics_loader.py  bundled_loader.py  ecc_loader.py  karpathy_loader.py  mattpocock_loader.py  sources.py  superpowers_loader.py
auc/skill_library/bundled/: _anbeime_manifest.json  _anthropics_manifest.json  _ecc_manifest.json  _karpathy_manifest.json  _mattpocock_manifest.json  _superpowers_manifest.json
auc/skill_library/bundled/accessibility/: SKILL.md
auc/skill_library/bundled/agent-architecture-audit/: SKILL.md
auc/skill_library/bundled/agent-eval/: SKILL.md
auc/skill_library/bundled/agent-harness-construction/: SKILL.md
auc/skill_library/bundled/agent-introspection-debugging/: SKILL.md
auc/skill_library/bundled/agent-payment-x402/: SKILL.md
auc/skill_library/bundled/agent-self-evaluation/: SKILL.md
auc/skill_library/bundled/agent-sort/: SKILL.md
auc/skill_library/bundled/agent-team/: SKILL.md
auc/skill_library/bundled/agentic-engineering/: SKILL.md
auc/skill_library/bundled/agentic-os/: SKILL.md
auc/skill_library/bundled/agentkit-multimedia-shopping/: SKILL.md
auc/skill_library/bundled/ai-first-engineering/: SKILL.md
auc/skill_library/bundled/ai-regression-testing/: SKILL.md
auc/skill_library/bundled/algorithmic-art/: SKILL.md
auc/skill_library/bundled/android-clean-architecture/: SKILL.md
auc/skill_library/bundled/angular-developer/: SKILL.md
auc/skill_library/bundled/anthropic-algorithmic-art/: SKILL.md
auc/skill_library/bundled/anthropic-brand-guidelines/: SKILL.md
auc/tools/: __init__.py  base.py  builtin.py  decorator.py  fetch.py  files.py  git.py  index_tools.py  privilege_floor.py  registry.py  roles.py  search.py  shell.py  subagent.py  todos.py
auc/web/: __init__.py  approval.py  approval_settings.py  auth.py  conversations.py  documents.py  editor_context.py  log_config.py  model_settings.py  preview.py  projects.py  pty_terminal.py  runner.py  server.py  session.py  skill_settings.py  upgrade.py  workspace.py
auc/web/static/: app.js  document_panel.js  i18n.js  icons.js  index.html  material_file_icons.js  message_render.js  polish.css  styles.css  terminal_panel.js  themes.css  themes.js
docs/: architecture.md  aum-compatibility.md  aum-integration.md  aurules.md  context-slicer.md  design-philosophy.md  glossary.md  interfaces.md  loops.md  model-config.md  tool-privilege.md
docs/adr/: 001-async-pluggable-loop.md  002-memory-boundary.md  003-context-slicer.md  004-project-rules.md  005-tool-privilege-2fa.md
docs/examples/: aurules.sample.md  minimal-react.md
docs/schema/: settings.schema.json
examples/: aum_dispatch.py  minimal_run.py
scripts/: import_agency_roles.py  import_anbeime_skills.py  import_anthropic_skills.py  import_ecc_skills.py  import_karpathy_skills.py  import_mattpocock_skills.py  import_superpowers_skills.py
tests/: conftest.py  test_agency_roles.py  test_agent_cancel.py  test_anthropic_client.py  test_autonomy.py  test_checkpoint.py  test_cli.py  test_cli_jobs.py  test_cli_mcp.py  test_cli_receipt.py  test_cli_resume.py  test_cli_ui.py  test_cli_worktree.py  test_code_index.py  test_code_review_fixes.py  test_code_review_p2.py  test_code_review_p3.py  test_code_review_p4.py  test_code_review_p5.py  test_compactor.py  test_concurrency.py  test_config.py  test_decision_chain.py  test_decorator.py  test_deepseek_anthropic.py  test_diagrams.py  test_dispatcher.py  test_documents.py  test_editor_context.py  test_escalation.py  test_eval.py  test_evolution.py  test_evolution_loop.py  test_extras.py  test_fetch_url.py  test_git_tools.py  test_hooks.py  test_index_backends.py  test_index_vector.py  test_isolation.py  (+56 more)
tests/eval/: 01_fix_add.yaml  02_create_readme.yaml  03_two_files.yaml  04_delete_temp.yaml  05_shell_create.yaml  06_json_config.yaml
tests/fixtures/: au-nuggets.yaml
tests/fixtures/sample_repo/: .aurules  stop_loss.py
(+461 files in other folders)
