[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auc"
version = "0.2.0"
description = "Agents-ufy-Core: asyncio single-agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ufy2024" }]
keywords = ["agents", "llm", "asyncio", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
openai = ["httpx>=0.27.0"]
telegram = ["httpx>=0.27.0"]
all = ["httpx>=0.27.0", "PyYAML>=6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[project.scripts]
auc = "auc.cli:main"

[project.urls]
Repository = "https://github.com/ufy2024/AuC"

[tool.hatch.build.targets.wheel]
packages = ["auc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
