[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufy-auc"
version = "0.3.1"
description = "Agents-ufy-Core (AuC): asyncio single-agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ufy2024" }]
keywords = ["agents", "llm", "asyncio", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# ── 按模式安装（pip install -e '.[模式]'）────────────────────────────
# llm     大模型 HTTP 客户端（OpenAI / Anthropic / DeepSeek）
# cli     终端增强（历史、Tab 补全、多行输入）
# web     网页 UI（FastAPI + SSE + 工作区 + 多模态）
# telegram  Telegram L3 二次授权
# qq        QQ L3 二次授权（OneBot 11 / 官方机器人）
# mcp     MCP 客户端（接入外部 stdio/HTTP MCP server）
# index   多语言符号索引（tree-sitter）+ 向量语义层（sentence-transformers）
# chat    终端对话推荐组合 = llm + cli
# all     上述全部可选组件
# dev     pytest + all（CI / 本地开发）
llm = ["httpx>=0.27.0"]
cli = ["prompt-toolkit>=3.0"]
mcp = ["mcp>=1.2.0"]
index = [
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "sentence-transformers>=2.2",
]
web = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=12.0",
]
telegram = ["httpx>=0.27.0"]
qq = ["httpx>=0.27.0"]
chat = [
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0",
]
openai = ["httpx>=0.27.0"]
all = [
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=12.0",
    "mcp>=1.2.0",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "sentence-transformers>=2.2",
]
# qq 与 telegram 共用 httpx，已包含在 all 中
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=12.0",
]

[project.scripts]
auc = "auc.cli:main"
auc-web = "auc.web.server:main"

[project.urls]
Homepage = "https://github.com/ufy2024/AuC"
Repository = "https://github.com/ufy2024/AuC"
Issues = "https://github.com/ufy2024/AuC/issues"

[tool.hatch.build.targets.wheel]
packages = ["auc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
